ks8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sec-lab
  labels:
    pod-security.kubernetes.io/enforce: "baseline"
    pod-security.kubernetes.io/audit: "baseline"
    pod-security.kubernetes.io/warn: "baseline"
